--- a/src/components/welcome/welcome.css
+++ b/src/components/welcome/welcome.css
@@ -1,1 +1,28 @@
-/* No CSS *//*# sourceMappingURL=welcome.css.map */
+.welcome-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.welc-welc {
+  color: antiquewhite;
+  font-family: "Permanent Marker", cursive;
+}
+
+.welc-title {
+  color: antiquewhite;
+  font-family: "Permanent Marker", cursive;
+}
+
+.welc-dir {
+  color: antiquewhite;
+  font-size: x-small;
+}
+/*# sourceMappingURL=welcome.css.map */
