--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,7 @@
 .header {
+  background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
+  height: 115px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -10,11 +12,31 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  color: antiquewhite;
+}
+
+.head-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 20px;
+  width: 200px;
+  color: antiquewhite;
+  font-family: "Permanent Marker", cursive;
+  font-size: 2rem;
+}
+
+.title-link {
+  text-decoration: none;
+  color: antiquewhite;
 }
 
 .head-form {
   width: 160px;
-  height: 40vh;
+  height: 115px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -26,6 +48,7 @@
 
 .head-user {
   width: 160px;
+  height: 86px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -49,17 +72,20 @@
       -ms-flex-pack: end;
           justify-content: flex-end;
   font-size: small;
+  color: antiquewhite;
 }
 
 input {
   background: transparent;
   border: none;
   border-bottom: 1px solid black;
+  color: antiquewhite;
 }
 
-button {
+.head-butt {
   background: transparent;
   font-weight: bold;
   border: none;
+  color: antiquewhite;
 }
 /*# sourceMappingURL=header.css.map */
