--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,21 +1,40 @@
 @import "../../sass/_vars";
 
 .header {
+  background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
+  height: 115px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  color: $text-color;
+}
+
+.head-title {
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+  width: 200px;
+  color: $text-color;
+  font-family: $font-family;
+  font-size: 2rem;
+}
+
+.title-link {
+  text-decoration: none;
+  color: $text-color;
 }
 
 .head-form {
   width: 160px;
-  height: 40vh;
+  height: 115px;
   display: flex;
   flex-direction: column;
 }
 
 .head-user {
   width: 160px;
+  height: 86px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -26,16 +45,19 @@
   display: flex;
   justify-content: flex-end;
   font-size: small;
+  color: $text-color;
 }
 
 input {
   background: transparent;
   border: none;
   border-bottom: 1px solid black;
+  color: $text-color;
 }
 
-button {
+.head-butt {
   background: transparent;
   font-weight: bold;
   border: none;
+  color: $text-color;
 }
