--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -1,1 +1,44 @@
-/* No CSS *//*# sourceMappingURL=form.css.map */
+.form-body {
+  height: 708px;
+  background-image: url("../../farmroad.jpg");
+  background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.form-main {
+  height: 50%;
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 15px;
+}
+
+.form-butts {
+  background: transparent;
+  border: none;
+  color: antiquewhite;
+  font-family: "Permanent Marker", cursive;
+  text-decoration: underline;
+}
+/*# sourceMappingURL=form.css.map */
