--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -1,9 +1,10 @@
 @import "../../sass/_vars";
 
 .dash-box {
-  height: 100%;
-  background-image: url("../../photo-1492496913980-501348b61469.jpeg");
+  height: 708px;
+  background-image: url("../../grain.jpg");
   background-size: cover;
+  background-position: center;
   display: flex;
   flex-direction: column;
   align-items: center;
