--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -18,7 +18,10 @@
 }
 
 .form-main {
-  height: 50%;
+  color: antiquewhite;
+  font-family: "Permanent Marker", cursive;
+  font-size: 1.75rem;
+  height: 90%;
   width: 80%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -30,12 +33,46 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.75);
   border-radius: 15px;
 }
 
-.form-butts {
+.img-form {
+  height: 150px;
+  width: 250px;
+}
+
+.form-inputs {
+  height: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  color: antiquewhite;
+  border-bottom-color: antiquewhite;
+}
+
+.form-input {
+  border-bottom-color: antiquewhite;
+}
+
+.form-text-area {
+  height: 200px;
+  width: 250px;
+  background-color: transparent;
+  color: antiquewhite;
+  border-color: antiquewhite;
+}
+
+.form-butt {
   background: transparent;
+  font-size: 1.25rem;
   border: none;
   color: antiquewhite;
   font-family: "Permanent Marker", cursive;
