--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -12,18 +12,53 @@
 }
 
 .form-main {
-  height: 50%;
+  color: $text-color;
+  font-family: $font-family;
+  font-size: 1.75rem;
+  height: 90%;
   width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.75);
   border-radius: 15px;
 }
 
-.form-butts {
+.img-form {
+  height: 150px;
+  width: 250px;
+}
+
+.form-inputs {
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  color: $text-color;
+  border-bottom-color: antiquewhite;
+}
+
+.form-input {
+  border-bottom-color: antiquewhite;
+}
+
+.form-text-area {
+  height: 200px;
+  width: 250px;
+  background-color: transparent;
+  color: $text-color;
+  border-color: antiquewhite;
+}
+
+// .form-butts {
+//   //   display: flex;
+//   //   flex-direction: row;
+//   //   justify-content: space-around;
+// }
+
+.form-butt {
   background: transparent;
-  // font-size: 1.5rem;
+  font-size: 1.25rem;
   //   font-weight: bold;
   border: none;
 
