working s3 workon form

--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -47,7 +47,7 @@
   width: 250px;
   background-color: transparent;
   color: $text-color;
-  border-color: antiquewhite;
+  border-color: #faebd7;
 }
 
 // .form-butts {
