--- a/src/components/mypost/mypost.scss
+++ b/src/components/mypost/mypost.scss
@@ -12,6 +12,7 @@
   align-items: center;
   //   justify-content: space-between;
   margin-top: 5px;
+  text-decoration: none;
 }
 
 // .post-left {
