--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -10,8 +10,9 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   margin-top: 5px;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .img-thumb {
