--- a/src/components/mypost/mypost.scss
+++ b/src/components/mypost/mypost.scss
@@ -16,11 +16,11 @@
 }
 
 .my-post-right {
-  width: 250px;
+  width: 300px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  // align-items: center;
+  align-items: center;
 }
 
 // .post-left {
